[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bet-tracker"
version = "0.1.0"
description = "Bet logging, bankroll tracking, and model evaluation. Pure Python. SQLite. Zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Benjamin Easington", email = "ben@fructura.com" },
]
keywords = ["betting", "sports-betting", "bankroll", "tracker", "kelly-criterion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bene-art/bet-tracker"
Repository = "https://github.com/bene-art/bet-tracker"
Issues = "https://github.com/bene-art/bet-tracker/issues"

[project.optional-dependencies]
math = ["betting-math-kit>=0.3.0"]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.4"]
all = ["betting-math-kit>=0.3.0", "pytest>=7.0", "mypy>=1.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["bet_tracker"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/bet_tracker"]
